<resources>
    <string name="app_name">WorldGreen</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Here!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Please enter your registered Email to sent you password reset instructions.</string>
    <string name="btn_create_report">Create Report</string>
    <string name="btn_profile">View Profile</string>
    <string name="create_event_button">Create Event</string>
    <string name="donate_button">Donate</string>
    <string name="view_all_report_button">View All Reports</string>
    <string name="view_all_event_button">View All Events</string>
    <string-array name="report_size">
        <item>Bag</item>
        <item>Wheelbarrow</item>
        <item>Car</item>
    </string-array>
    <string name="menu_signout">Sign Out</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="btn_view_my_report">My reports</string>
    <string name="btn_view_my_event">My Events</string>
    <string name="btn_view_participating_event">I am participating</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_maps">Maps</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required</string>
    <string name="location_permission_denied">Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'WorldGreen\'.</string>
    <string name="permission_required_toast">Location permission is required for this features.</string>
    <string name="main_activity">Home</string>
    <string name="report_title">Enter title</string>
    <string name="report_description">Enter description</string>
    <string name="Dashboard">How to use</string>
    <string name="nav_participate_event">Participate Events</string>
    <string name="instruction">Create report</string>
    <string name="how_to_create_report">Taking a snapshot of illegal dumping along with title and description</string>
    <string name="how_to_create_event" > 1/ Select View All Report\n2/ Pick your favourite report on Maps\n3/ Create new event</string>
    <string name="how_to_participate_event">1/ Select View All Event\n2/ Pick your favourite event on List\n3/ Select Going</string>
    <string name="how_to_donate">Supporting development team to create a better services !</string>
    <string name="subtitle">My Activity</string>
</resources>
