<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Dashboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dashboard"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/Logout_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/bg_main"
            android:text="@string/btn_sign_out"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/create_report_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/bg_main"
            android:text="@string/btn_create_report"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
        <Button
            android:id="@+id/profile_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/bg_main"
            android:text="@string/btn_profile"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>