<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewBackgroundColor"
    tools:context=".MainActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>
        <TextView
            android:id="@+id/Dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Dashboard"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textColor="@color/textColor" />

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_menu_camera"
                android:tint="@color/textColor"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction"
                android:layout_marginLeft="20dp"
                android:textSize="25dp"
                android:textColor="@color/textColor" />

        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_create_report"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:textColor="@color/textColor" />
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_menu_event"
                android:tint="@color/textColor"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Create event"
                android:layout_marginLeft="20dp"
                android:textSize="25dp"
                android:textColor="@color/textColor" />

        </LinearLayout>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_to_create_event"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/textColor" />

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_menu_participate_event"
                android:tint="@color/textColor"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Participate in event"
                android:layout_marginLeft="20dp"
                android:textSize="25dp"
                android:textColor="@color/textColor" />

        </LinearLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_participate_event"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/textColor" />

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_menu_donate"
                android:tint="@color/textColor"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Donate"
                android:layout_marginLeft="20dp"
                android:textSize="25dp"
                android:textColor="@color/textColor" />
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_donate"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/textColor" />
    </LinearLayout>
</ScrollView>


</android.support.design.widget.CoordinatorLayout>




    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@color/colorPrimaryDark"-->
    <!--android:gravity="center"-->
    <!--android:orientation="vertical"-->
    <!--android:padding="@dimen/activity_horizontal_margin">-->


    <!--<android.support.design.widget.TextInputLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <!--<TextView-->
    <!--android:id="@+id/Dashboard"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Dashboard"-->
    <!--android:textAlignment="center"-->
    <!--android:textColor="@android:color/white" />-->

    <!--</android.support.design.widget.TextInputLayout>-->

    <!--<Button-->
    <!--android:id="@+id/create_report_button"-->
    <!--android:layout_width="300dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:background="@color/bg_main"-->
    <!--android:text="@string/btn_create_report"-->
    <!--android:textColor="@android:color/black"-->
    <!--android:textStyle="bold" />-->

    <!--<Button-->
    <!--android:id="@+id/profile_button"-->
    <!--android:layout_width="300dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:background="@color/bg_main"-->
    <!--android:text="@string/btn_profile"-->
    <!--android:textColor="@android:color/black"-->
    <!--android:textStyle="bold" />-->

    <!--<Button-->
    <!--android:id="@+id/view_all_report_button"-->
    <!--android:layout_width="300dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:background="@color/bg_main"-->
    <!--android:text="@string/view_all_report_button"-->
    <!--android:textColor="@android:color/black"-->
    <!--android:textStyle="bold" />-->
    <!--<Button-->
    <!--android:id="@+id/view_all_event_button"-->
    <!--android:layout_width="300dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:background="@color/bg_main"-->
    <!--android:text="@string/view_all_event_button"-->
    <!--android:textColor="@android:color/black"-->
    <!--android:textStyle="bold" />-->
    <!--<Button-->
    <!--android:id="@+id/donate_button"-->
    <!--android:layout_width="300dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:background="@color/bg_main"-->
    <!--android:text="@string/donate_button"-->
    <!--android:textColor="@android:color/black"-->
    <!--android:textStyle="bold" />-->

    <!--<Button-->
    <!--android:id="@+id/Logout_button"-->
    <!--android:layout_width="300dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:background="@color/bg_main"-->
    <!--android:text="@string/btn_sign_out"-->
    <!--android:textColor="@android:color/black"-->
    <!--android:textStyle="bold" />-->
    <!--</LinearLayout>-->